Release notes
-------------

Date          Version   Comment
2015/09/24    0.9.0     Add support for importing equations
2015/09/21    0.0.9     Fix security issues when deleting imported Word file, other code cleanup
2015/09/17    0.0.8     Ensure image names are always unique when importing multiple times
2015/09/16    0.0.7     Clean up code to comply with Moodle guidelines and implement reviewer comments, import images