@@ -2,6 +2,7 @@ Release notes
 -------------
 
 Date          Version   Comment
+2015/09/24    0.9.1     Automate installation process so that icon is added to files group in editor
 2015/09/24    0.9.0     Add support for importing equations
 2015/09/21    0.0.9     Fix security issues when deleting imported Word file, other code cleanup
 2015/09/17    0.0.8     Ensure image names are always unique when importing multiple times
